hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/concrete.php.exp
File "concrete.php", line 8, characters 14-14:
The assigned type of this type constant is inconsistent with its parent (Typing[4110])
File "concrete.php", line 8, characters 27-29:
Expected int
File "concrete.php", line 4, characters 18-25:
But got arraykey
