hphp/hack/test/typecheck/abstract_typeconsts/disable_patcs/concrete.php
<?hh // strict

class C {
  const type T = arraykey;
}

class D extends C {
  const type T as mixed = int;
}
